--- a/public/css/painter.css
+++ b/public/css/painter.css
@@ -1,49 +1,87 @@
 /***** MEDIA QUERIES ************/
 /***** COLORS ********************/
-/* line 68, painter.scss */
 * {
   box-sizing: border-box; }
 
-/* line 3, painter.scss */
+a {
+  text-decoration: none; }
+
 html:after, body:after, .row:after, .columns:after, .container:after {
   content: "";
   display: table;
   clear: both; }
 
-/* line 74, painter.scss */
 body {
   margin: 0;
   background: #777;
-  font-family: Helvetica,Arial,sans-serif; }
+  font-family: Helvetica,Arial,sans-serif;
+  font-size: 12px; }
 
-/* line 79, painter.scss */
 .container {
-  max-width: 1080px; }
+  max-width: 1080px;
+  padding-top: 10px; }
+
+/*********** UPDATE MODAL **********************/
+#lean_overlay {
+  position: fixed;
+  z-index: 100;
+  top: 0px;
+  left: 0px;
+  height: 100%;
+  width: 100%;
+  background: #000;
+  display: none; }
+
+#update-modal {
+  width: 404px;
+  padding: 10px 20px;
+  display: none;
+  background: #FFF;
+  text-align: center;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.7);
+  -webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.7);
+  -moz-box-shadow: 0 0px 4px rgba(0, 0, 0, 0.7); }
+  #update-modal ul {
+    margin: 30px;
+    padding: 0;
+    text-align: left;
+    font-size: 1.5em; }
+    #update-modal ul li {
+      padding: 3px 0; }
+
+.modal-close {
+  position: absolute;
+  top: 8px;
+  right: 10px;
+  font-size: 2em;
+  padding: 8px;
+  z-index: 2;
+  color: #111; }
+  .modal-close:hover {
+    color: #666; }
 
 /************ HEADER *******************************/
-/* line 84, painter.scss */
 header {
   z-index: 1;
   position: relative;
   height: 140px;
   overflow: hidden;
   background: white;
-  box-shadow: 0px 3px 2px 0px #111;
+  box-shadow: 0px 2px 2px 0px #111;
   padding-right: 18px; }
-  /* line 92, painter.scss */
   header .recentDrawing {
     max-height: 100%;
     float: right; }
-  /* line 96, painter.scss */
   header #logo {
     max-height: 100%;
     padding: 4px; }
-  @media only screen and (max-width: 481px) {
-    /* line 84, painter.scss */
+  @media only screen and (max-width: 568px) {
     header {
-      height: 90px; } }
+      height: 85px; } }
 
-/* line 104, painter.scss */
 .header-control {
   position: absolute;
   right: 5px;
@@ -51,169 +89,129 @@ header {
   color: #000;
   font-size: 20px; }
 
-/* line 111, painter.scss */
 .hide-drawings {
   top: 5px; }
 
-/* line 114, painter.scss */
 .refresh-drawings {
   bottom: 5px;
   font-size: 12px; }
 
 /************ NAVIGATION ***************************/
-/* line 120, painter.scss */
 nav {
-  margin: 0px 20px;
-  z-index: 0;
-  width: 120px;
-  box-shadow: 0px 2px 2px 0px #111;
-  position: absolute;
-  text-align: center; }
-  /* line 127, painter.scss */
+  margin: 0px 10px -30px;
+  z-index: 0; }
+  nav:after {
+    content: "";
+    display: table;
+    clear: both; }
   nav a {
     background: #EEDF8E;
-    display: block;
     text-decoration: none;
     color: black;
-    font-size: 16px;
-    width: 100%;
     padding: 10px;
-    position: relative;
     font-family: 'Open Sans', sans-serif;
-    border-top: 1px solid #666; }
-    /* line 138, painter.scss */
+    float: left;
+    box-shadow: 0px 2px 0px 0px #111;
+    border-radius: 0 0 4px 4px;
+    margin: 0 3px;
+    font-size: 1em;
+    -webkit-transition: 0.1s ease-in-out;
+    -moz-transition: 0.1s ease-in-out;
+    -o-transition: 0.1s ease-in-out; }
     nav a:hover {
-      background: #EBE2B5; }
-  /* line 142, painter.scss */
-  nav div {
-    background: white;
-    border-top: 1px solid;
-    padding: 5px; }
-  @media only screen and (max-width: 481px) {
-    /* line 120, painter.scss */
+      background: #EBE2B5;
+      margin-top: 2px;
+      margin-bottom: -2px; }
+  nav .nav-link-right {
+    float: right; }
+  @media only screen and (max-width: 568px) {
     nav {
       display: none; } }
-  @media only screen and (max-width: 1110px) {
-    /* line 120, painter.scss */
+  @media only screen and (max-width: 1400px) {
     nav {
-      position: relative; } }
-
-/************ DONATION BAR *************************/
-/* line 156, painter.scss */
-#donationDropdown {
-  display: none;
-  padding: 20px;
-  text-align: center;
-  margin: 0 auto;
-  width: 70%;
-  background-color: #4E8FD5;
-  box-shadow: 0px 2px 2px 0px #111; }
-  /* line 164, painter.scss */
-  #donationDropdown p {
-    color: #fff;
-    text-shadow: 0 1px #666;
-    font-family: 'Open Sans', sans-serif;
-    font-size: 20px;
-    margin: 5px 0; }
-    /* line 170, painter.scss */
-    #donationDropdown p:nth-child(2) {
-      font-size: .8em;
-      width: 75%;
-      margin: 5px auto; }
-  @media only screen and (max-width: 1110px) {
-    /* line 156, painter.scss */
-    #donationDropdown {
-      width: 50%; } }
-  @media only screen and (max-width: 381px) {
-    /* line 156, painter.scss */
-    #donationDropdown {
-      position: absolute;
-      top: -9999px; } }
-  /* line 184, painter.scss */
-  #donationDropdown #donationButtons form {
-    display: inline; }
-  /* line 187, painter.scss */
-  #donationDropdown #donationButtons a {
-    font-family: 'Open Sans', sans-serif;
-    color: #ddd;
-    margin: 5px; }
+      position: relative;
+      margin: 0 10px 0; } }
 
 /************ HERO TEXT ****************************/
-/* line 197, painter.scss */
-h1 {
+h1.title {
   font-family: 'Open Sans', sans-serif;
   color: white;
   text-align: center;
   text-shadow: 0 1px #333;
-  margin: 10px 0 0; }
+  margin: 0 0 10px;
+  font-size: 3em; }
+  @media only screen and (max-width: 900px) {
+    h1.title {
+      font-size: 2em; } }
+  @media only screen and (max-width: 568px) {
+    h1.title {
+      font-size: 1.2em; } }
+  @media only screen and (max-width: 480px) {
+    h1.title {
+      font-size: 1.5em; } }
 
 /************ LEFT COLUMN **************************/
-/* line 207, painter.scss */
 #imageContainer {
   max-width: 100%;
   width: 100%;
   height: auto;
   background: #bbb;
   display: block;
-  margin: 10px auto 0px;
+  margin: 0 auto;
   border-radius: 5px;
   box-shadow: 0 2px 0 0 #222;
   text-align: center;
   font: 0/0 a; }
-  /* line 218, painter.scss */
   #imageContainer:before {
     content: ' ';
     display: inline-block;
     vertical-align: middle;
     /* vertical alignment of the inline element */
     height: 100%; }
-  /* line 224, painter.scss */
   #imageContainer img {
     display: inline-block;
     vertical-align: middle;
     font: 16px/1 Arial sans-serif;
-    max-width: 100%;
+    width: 100%;
     max-height: 100%;
     border-radius: 5px; }
-  @media only screen and (max-width: 381px) {
-    /* line 207, painter.scss */
+  @media only screen and (max-width: 480px) {
     #imageContainer {
       display: none; } }
 
-/* line 236, painter.scss */
 #pokemonName {
   font-family: 'Open Sans', sans-serif;
   text-align: center;
   color: white;
-  font-size: 36px;
-  margin: 10px 0;
+  font-size: 3em;
+  margin: 5px 0;
   text-shadow: 0 2px #333; }
+  @media only screen and (max-width: 568px) {
+    #pokemonName {
+      font-size: 2em; } }
+  @media only screen and (max-width: 480px) {
+    #pokemonName {
+      font-size: 3em; } }
 
 /************ CENTER COLUMN **************************/
-/* line 245, painter.scss */
 .center-column {
-  padding-top: 30px;
   text-align: center; }
-  @media only screen and (max-width: 381px) {
-    /* line 245, painter.scss */
-    .center-column {
-      padding-top: 0; } }
 
-/* line 252, painter.scss */
 #timer {
   color: #fff;
   font-family: 'Open Sans', sans-serif;
-  font-size: 48px;
+  font-size: 4em;
   display: none; }
-  @media only screen and (max-width: 381px) {
-    /* line 252, painter.scss */
+  @media only screen and (max-width: 568px) {
+    #timer {
+      font-size: 3em; } }
+  @media only screen and (max-width: 480px) {
     #timer {
       display: hidden; } }
 
-/* line 261, painter.scss */
 #newRound {
   position: relative;
-  background: #78bc3f;
+  background: #78BC3F;
   box-shadow: 0 4px 0 0 #306901;
   color: #fff;
   outline: none;
@@ -226,28 +224,48 @@ h1 {
   border-radius: 5px;
   clear: both;
   border-radius: 5px;
-  font-size: 36px;
-  line-height: 36px;
+  font-size: 1.5em;
   margin: 10px auto;
-  padding: 8px 20px; }
-  /* line 49, painter.scss */
+  padding: 8px 6px;
+  margin-top: 30px; }
   #newRound:enabled:active {
     top: 4px;
     box-shadow: none; }
-  /* line 53, painter.scss */
   #newRound:disabled {
     opacity: 0.7; }
   @media only screen and (max-width: 900px) {
-    /* line 261, painter.scss */
     #newRound {
-      font-size: 24px;
-      line-height: 24px;
-      padding: 8px 10px; } }
+      font-size: 1.2em;
+      padding: 10px 6px;
+      width: 100%;
+      margin-top: 10px; } }
+  @media only screen and (max-width: 480px) {
+    #newRound {
+      font-size: 2em;
+      width: auto;
+      padding: 8px 20px;
+      margin: 0 auto 10px; } }
+  #newRound.intro {
+    font-size: 3em;
+    padding: 8px 20px; }
+    @media only screen and (max-width: 900px) {
+      #newRound.intro {
+        font-size: 2em;
+        padding: 10px 12px; } }
+    @media only screen and (max-width: 568px) {
+      #newRound.intro {
+        font-size: 1.5em;
+        line-height: 1.5em;
+        padding: 10px 6px; } }
+    @media only screen and (max-width: 480px) {
+      #newRound.intro {
+        font-size: 2em;
+        width: auto;
+        padding: 8px 20px; } }
 
-/* line 274, painter.scss */
 .share, #save {
   position: relative;
-  background: #478e95;
+  background: #478E95;
   box-shadow: 0 4px 0 0 #095057;
   color: #fff;
   outline: none;
@@ -261,45 +279,56 @@ h1 {
   clear: both;
   border-radius: 5px;
   margin: 10px auto;
-  font-size: 24px;
-  line-height: 24px;
-  padding: 10px 20px;
+  font-size: 2em;
+  padding: 8px 0;
+  width: 47%;
   display: none;
   text-decoration: none; }
-  /* line 49, painter.scss */
   .share:enabled:active, #save:enabled:active {
     top: 4px;
     box-shadow: none; }
-  /* line 53, painter.scss */
   .share:disabled, #save:disabled {
     opacity: 0.7; }
-  /* line 283, painter.scss */
   .share:active, #save:active {
     top: 2px;
     box-shadow: none; }
+  @media only screen and (max-width: 480px) {
+    .share, #save {
+      margin: 0 auto 10px; } }
 
-/* line 288, painter.scss */
+@media only screen and (max-width: 480px) {
+  .share {
+    max-width: 20%; } }
+
+#save {
+  width: 100%;
+  max-width: 200px; }
+  @media only screen and (max-width: 900px) {
+    #save {
+      font-size: 1.5em; } }
+  @media only screen and (max-width: 480px) {
+    #save {
+      font-size: 2em;
+      max-width: 40%; } }
+
 #save [class^="icon-"] {
-  font-size: 18px;
+  font-size: 1em;
   margin-right: 5px; }
 
 /************ RIGHT COLUMN **************************/
-/* line 294, painter.scss */
 #canvas-container {
   position: relative; }
-  /* line 296, painter.scss */
   #canvas-container #canvas {
     max-width: 100%;
     width: 100%;
     height: auto;
     background: #bbb;
     display: block;
-    margin: 10px auto 0px;
+    margin: 0 auto;
     border-radius: 5px;
     box-shadow: 0 2px 0 0 #222;
     pointer-events: none;
     cursor: url(../img/cursor.png), crosshair; }
-  /* line 309, painter.scss */
   #canvas-container #pip {
     display: none;
     position: absolute;
@@ -308,39 +337,31 @@ h1 {
     top: 5px;
     left: 5px;
     border-radius: 5px; }
-    @media only screen and (max-width: 381px) {
-      /* line 309, painter.scss */
+    @media only screen and (max-width: 480px) {
       #canvas-container #pip {
         display: block; } }
-    /* line 320, painter.scss */
     #canvas-container #pip img {
       max-width: 100%;
       max-height: 100%;
       border-radius: 5px; }
-  /* line 326, painter.scss */
   #canvas-container #pip-timer {
     display: none;
     position: absolute;
     right: 10px;
     top: 5px;
     font-size: 36px; }
-    @media only screen and (max-width: 381px) {
-      /* line 326, painter.scss */
+    @media only screen and (max-width: 480px) {
       #canvas-container #pip-timer {
         display: block; } }
 
-/* line 338, painter.scss */
 .controls {
   margin: 0 auto;
   border-radius: 5px; }
-  /* line 341, painter.scss */
   .controls ul {
     list-style: none;
-    float: left;
     padding: 0;
     width: 100%;
     text-align: center; }
-    /* line 347, painter.scss */
     .controls ul li {
       display: inline-block;
       margin: 0 5px 5px;
@@ -351,71 +372,60 @@ h1 {
       cursor: pointer;
       border: 0;
       box-shadow: 0 2px 0 0 #222; }
-      /* line 25, painter.scss */
       .controls ul li.selected {
         border: 2px solid #ccc;
         top: 2px;
         box-shadow: none; }
-      @media only screen and (max-width: 381px) {
-        /* line 347, painter.scss */
+      @media only screen and (max-width: 568px) {
+        .controls ul li {
+          margin: 0 1% 5px;
+          width: 20%;
+          height: 30px; } }
+      @media only screen and (max-width: 480px) {
         .controls ul li {
           width: 46px;
           height: 46px; } }
-      /* line 353, painter.scss */
       .controls ul li a {
         display: block;
         height: 100%; }
 
 /*for each item in $rainbow-color-names, create a class with a background set to the corresponding color in $rainbow-colors.*/
-/* line 14, painter.scss */
 .red {
-  background: #f42a35; }
+  background: #F42A35; }
 
-/* line 14, painter.scss */
 .orange {
-  background: #ffa200; }
+  background: #FFA200; }
 
-/* line 14, painter.scss */
 .yellow {
-  background: #ffd500; }
+  background: #FFD500; }
 
-/* line 14, painter.scss */
 .light-green {
-  background: #a8bf12; }
+  background: #A8BF12; }
 
-/* line 14, painter.scss */
 .green {
-  background: #2eb52f; }
+  background: #2EB52F; }
 
-/* line 14, painter.scss */
 .light-blue {
-  background: #00aab5; }
+  background: #00AAB5; }
 
-/* line 14, painter.scss */
 .blue {
-  background: #325bc5; }
+  background: #325BC5; }
 
-/* line 14, painter.scss */
 .pink {
-  background: #fad0de; }
+  background: #FAD0DE; }
 
-/* line 14, painter.scss */
 .purple {
-  background: #946d9b; }
+  background: #946D9B; }
 
-/* line 14, painter.scss */
 .brown {
-  background: #875e37; }
+  background: #875E37; }
 
-/* line 14, painter.scss */
 .gray {
-  background: #8e969b; }
+  background: #8E969B; }
 
-/* line 365, painter.scss */
 .black {
   background: #000; }
 
-/* line 369, painter.scss */
 #colorSelect {
   background: #fff;
   border-radius: 5px;
@@ -425,7 +435,6 @@ h1 {
   max-width: 100%;
   width: 300px;
   position: relative; }
-  /* line 378, painter.scss */
   #colorSelect:after {
     bottom: 100%;
     left: 50%;
@@ -440,14 +449,13 @@ h1 {
     border-width: 12px;
     margin-left: -10px; }
 
-/* line 393, painter.scss */
 #addNewColor {
   position: relative;
-  background: #946d9b;
-  box-shadow: 0 4px 0 0 #5b575c;
+  background: #946D9B;
+  box-shadow: 0 4px 0 0 #5B575C;
   color: #fff;
   outline: none;
-  text-shadow: 0 1px #5b575c;
+  text-shadow: 0 1px #5B575C;
   display: block;
   font-size: 16px;
   border: none;
@@ -460,22 +468,17 @@ h1 {
   padding: 10px;
   width: 90%;
   font-size: 20px; }
-  /* line 49, painter.scss */
   #addNewColor:enabled:active {
     top: 4px;
     box-shadow: none; }
-  /* line 53, painter.scss */
   #addNewColor:disabled {
     opacity: 0.7; }
 
-/* line 402, painter.scss */
 .sliders {
   padding-top: 4px; }
-  /* line 404, painter.scss */
   .sliders p {
     margin: 8px 0;
     vertical-align: middle; }
-  /* line 408, painter.scss */
   .sliders label {
     text-align: right;
     font-family: "Open Sans",sans-serif;
@@ -484,36 +487,29 @@ h1 {
     margin: 0 10px 0 10px;
     width: 20%;
     font-size: 16px; }
-  /* line 416, painter.scss */
   .sliders input {
     position: relative;
     width: 60%;
     top: 4px; }
 
 /********** FOOTER **********************/
-/* line 427, painter.scss */
 footer {
   margin-top: 40px;
   background: #444;
   color: #eee;
   padding: 20px 0; }
-  /* line 432, painter.scss */
   footer .footerLink {
     float: left;
     width: 100%; }
-  /* line 436, painter.scss */
   footer #byline {
     float: right;
     width: 100%;
     text-align: right; }
-  /* line 441, painter.scss */
   footer .fb-like-box {
     float: right; }
-  /* line 444, painter.scss */
   footer a {
     text-decoration: none;
     font-weight: bold;
     color: #BD9E70; }
-    /* line 448, painter.scss */
     footer a:hover {
       color: #E4C08A; }
