--- a/public/sass/gallery.scss
+++ b/public/sass/gallery.scss
@@ -30,48 +30,86 @@ header {
 		font-family: "Open Sans" ,sans-serif;
 		color: #fff;
 		text-align: center;
-		font-size: 16px;
+		font-size: 1.25em;
 		margin: 5px;
 	}
 	a {
-		color: #ddd;
+		color: #303030;
 		&:hover {
-			color: #bbb;
+			color: #222222;
 		}
 	}
-	
+
 
 }
 .drawing {
-	height: auto;
 	float: left;
 	position: relative;
-	width: 25%;
-	padding: 10px;
-	img {
-		width: 100%;
-		height: auto;
-		border-radius: 5px;
-		box-shadow: 0 2px 0 0 #222;
+	width: 23%;
+	margin: 1%;
+	background-color: #fff;
+	background-image: url("none");
+	// Background image loaded dynamically via ajax call
+	background-size: cover;
+	border-radius: 4px;
+	box-shadow: 0 2px 0 0 #222;
+
+	@media only screen and (max-width : 650px) {
+	  /* Tablet & phone view: 2 tiles */
+	    width: 48%;
+			margin: 1%;
+  }
+	@media only screen and (max-width : 1050px) and (min-width : 651px) {
+	  /* Small desktop / ipad view: 3 tiles */
+    width: 30%;
+		margin: 1.66%;
+  }
+	h1 {
+		display: none;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		right: 0;
+		color: #FAFAFA;
+		text-align: center;
+		font-weight: 400;
+		letter-spacing: 0.5px;
+		background-color: #666;
+		margin: 0;
+		padding: 6px 0 3px;
+		border-radius: 0 0 3px 3px;
+	}
+	a {
+		display: none;
+		font-size: 1.5em;
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		padding: 7px 10px 5px;
+		color: #FAFAFA;
+		background-color: #666;
+		border-radius: 3px 0 3px 0;
+		&:hover {
+			color: #ccc;
+		}
+	}
+	&:hover a {
+		display: inline-block;
+	}
+	&:hover h1 {
+		display: inline-block;
+	}
+	&:before {
+	content: "";
+	display: block;
+	padding-top: 100%; 	/* initial ratio of 1:1*/
 	}
 }
+
 
 .loader {
 	margin: 0 auto;
 	@include button(#78BC3F,#306901);
 	padding: 20px;
 	font-size:24px;
-}
-
-@media only screen and (max-width : 650px) {
-  /* Tablet & phone view: 2 tiles */
-  .drawing {
-    width: 50%;
-  }
-}
-@media only screen and (max-width : 1050px) and (min-width : 651px) {
-  /* Small desktop / ipad view: 3 tiles */
-  .drawing {
-    width: 33.3%;
-  }
 }
