--- a/public/sass/gallery.scss
+++ b/public/sass/gallery.scss
@@ -72,20 +72,20 @@ header {
 		right: 0;
 		color: #FAFAFA;
 		text-align: center;
+		font-family: "Open sans", Arial, Helvetica, sans-serif;
 		font-weight: 400;
-		letter-spacing: 0.5px;
 		background-color: #666;
 		margin: 0;
-		padding: 6px 0 3px;
+		padding: 0;
 		border-radius: 0 0 3px 3px;
 	}
 	a {
 		display: none;
-		font-size: 1.5em;
+		font-size: 2em;
 		position: absolute;
 		bottom: 0;
 		left: 0;
-		padding: 7px 10px 5px;
+		padding: 0 10px;
 		color: #FAFAFA;
 		background-color: #666;
 		border-radius: 3px 0 3px 0;
