--- a/public/sass/pokedraw.scss
+++ b/public/sass/pokedraw.scss
@@ -11,6 +11,7 @@ body {
   font-size: 12px;
 }
 .container {
+  @include clearfix;
 	max-width: 1000px;
   margin: 0 auto;
   padding: 0 1%;
@@ -127,21 +128,21 @@ $header-height-desktop: 140px;
     width: 100%;
     height: 50%;
     text-align: center;
-    padding: 0.5em;
+    padding: 0.25em 0.5em;
+    font-family: 'Open Sans', sans-serif;
     font-size: 1.25em;
-    font-weight: 300;
-    letter-spacing: 0.7px;
     display: flex;
     justify-content: space-around;
-    background: tomato;
-    color: white;
+    background: #EEDF8E;
+    box-shadow: 0px 1px 4px -2px #4F4F4F;
+    color: black;
 
     @media #{$mq-phone-landscape} {
       width: 49%;
     }
 
     &:hover {
-      // background: #666666;
+      background: #EFE29E;
     }
 
     &:not(:last-child) {
